2004-03-19  Marcus Brinkmann  <marcus@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb): Make the assembler volatile.

2004-03-17  Marcus Brinkmann  <marcus@gnu.org>

	* l4/schedule.h (_L4_TIME_M_BITS, _L4_TIME_PERIOD_E_BITS,
	_L4_TIME_PERIOD_E_MAX): New macros.
	(_L4_time_period): Use them.
	(_L4_zero_time): Use them.
	* l4/gnu/schedule.h (L4_TIME_PERIOD_MAX): Define macro.
	(l4_time_mul2): New function.

	* l4/thread.h (_L4_start, _L4_start_sp_ip, _L4_start_sp_ip_flags):
	Add _L4_XCHG_REGS_CANCEL_IPC to control flags, to match L4 CVS.
	* l4/compat/space.h (L4_UnmapFpage): Change the return type to
	L4_Fpage_t and return the fpage to match L4 CVS.
	(L4_Flush): Likewise.
	* l4/syscall.h (_L4_ERR_INV_SPACE, _L4_ERR_INV_SCHEDULER,
	_L4_ERR_INV_PARAM, _L4_ERR_UTCB_AREA, _L4_ERR_KIP_AREA,
	_L4_ERR_NO_MEM): Decrement by one to match the L4 CVS.

2004-03-17  Johan Rydberg  <jrydberg@night.trouble.net>

	* l4/gnu/kip.h (l4_utcb_alignment_log2): Use void as argument type.
	(l4_utcb_alignment): Likewise.

	* l4/gnu/ipc.h (l_map_item): Rename to ...
	(l4_map_item): ... this.
	(l_is_map_item): Rename to ...
	(l4_is_map_item): ... this.
	(l4_add_cache_allocation_hint_to): Put attribute properly behind type.

	* l4/thread.h (__L4_STOP): Undefine after last use.

>>>>>>> 1.27
2004-03-16  Marcus Brinkmann  <marcus@gnu.org>

	Total overhaul, and I am not going to list all the changes.  Every
	single file, and every single interface has been touched, to be
	able to cleanly provide multiple interfaces in parallel.  The
	compatibility interface has been added.  Some bugs have been
	fixed, some others have been introduced.

2003-10-20  Johan Rydberg  <jrydberg@night.trouble.net>

	* l4/kip.h (l4_page_trunc): New function.
	(l4_page_round): Likewise.
	(l4_atop): Likewise.
	(l4_ptoa): Likewise.

2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>

	* powerpc/l4/bits/stubs-init.h (__L4_SETUP_SYSCALL): Do correct
	relocation (that means none).
